--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,12 +18,14 @@ services:
         OMEKA_VERSION: 4.1.1  # Change to the desired Omeka S version
     container_name: omeka-app
     restart: always
+    user: "www-data"
     depends_on:
       - db
     ports:
       - "8080:80"
     volumes:
       - ./config/database.ini:/var/www/html/config/database.ini
+      - ./files:/var/www/html/files
 
 volumes:
   db_data:
